feat: Attn map behaves good after using registers.

--- a/notebooks/attention_visualize.ipynb
+++ b/notebooks/attention_visualize.ipynb
@@ -5,18 +5,33 @@
    "metadata": {},
    "source": [
     "# Visualize the last attention layer of DINOv2\n",
-    "This is the same visualization method used in DINOv1\n",
+    "This is the same visualization method used in DINOv1. I modified the ViT a bit to support the api used in DINOv1, this is inspired by [Tobias Ziegler](https://gitlab.com/ziegleto-machine-learning/dino).\n",
     "\n",
-    "https://gitlab.com/ziegleto-machine-learning/dino/-/blob/main/visualize_attention.py\n",
+    "Meanwhile, to removes the artifacts, please use model equipped with registers, see this [paper](https://arxiv.org/abs/2309.16588). The artifacts are not observed in DINOv1, whereas it leads to huge impact to DINOv2.\n",
     "\n",
-    "The results are bad compared to DINOv1, this [paper](https://arxiv.org/pdf/2309.16588) may explain the reason."
+    "\n",
+    "The results are still slightly worse compared to DINOv1."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "cuda\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -49,13 +64,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def main(video_path, model, output_path, device='cuda'):\n",
-    "    \n",
-    "    raw_tensor, input_tensor, fps = load_preprocess_video(video_path, target_size=None, patch_size = model.patch_size)# 448 is multiples of patch_size (14)\n",
+    "    num_register_tokens = 4\n",
+    "    raw_tensor, input_tensor, fps = load_preprocess_video(video_path, target_size=448*1, patch_size = model.patch_size)# 448 is multiples of patch_size (14)\n",
     "    B, C, H, W, patch_size, embedding_dim, patch_num = print_video_model_stats(input_tensor, model)\n",
     "    \n",
     "    colorized_attention_map_list = []\n",
@@ -67,12 +82,13 @@
     "            \n",
     "            # Forward pass for the single frame\n",
     "            last_selfattention = model.get_last_selfattention(frame).detach().cpu().numpy()\n",
+    "            \n",
     "            last_selfattention_list.append(last_selfattention)\n",
     "    \n",
     "    last_selfattentions = np.vstack(last_selfattention_list)  # (B, num_heads, num_tokens, num_tokens)\n",
     "    \n",
     "    # Resize the attention map for the single frame\n",
-    "    colorized_attn_maps = attention_visualize(last_selfattentions, height_in_patches = int(H/patch_size), width_in_patches = int(W/patch_size), patch_size=patch_size)\n",
+    "    colorized_attn_maps = attention_visualize(last_selfattentions, height_in_patches = int(H/patch_size), width_in_patches = int(W/patch_size), patch_size=patch_size, num_register_tokens = model.num_register_tokens)\n",
     "            \n",
     "    \n",
     "    save_np_array_as_video(colorized_attn_maps, output_path=output_path, fps=fps)\n"
@@ -80,9 +96,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Video FPS: 20.00, Total Frames: 448, Duration: 22.40 seconds\n",
+      "Input tensor shape: Batch=448, Channels=3, Height=448, Width=448\n",
+      "Patch size: 14\n",
+      "Embedding dimension: 384\n",
+      "Number of patches of each image: 1024\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing Frames: 100%|██████████| 448/448 [00:13<00:00, 32.74frame/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Video saved to ./data/outputs/attn_pong_combined_s.mp4\n"
+     ]
+    }
+   ],
    "source": [
     "# from dinov2.models.vision_transformer import vit_small, vit_large\n",
     "\n",
@@ -103,15 +145,15 @@
     "video_path = \"/home/lyk/Projects/dinov2/notebooks/data/videos/crane_video.mp4\"\n",
     "output_path = \"/home/lyk/Projects/dinov2/notebooks/data/outputs/attn_video_crane.mp4\"\n",
     "\n",
-    "model_size = \"b\"\n",
+    "model_size = \"s\"\n",
     "\n",
-    "video_path = \"./data/videos/dinov2_dog.mp4\"\n",
-    "output_path = f\"./data/outputs/attn_dinov2_dog_{model_size}.mp4\"\n",
+    "video_path = \"./data/videos/pong_combined.mp4\"\n",
+    "output_path = f\"./data/outputs/attn_pong_combined_{model_size}.mp4\"\n",
     "\n",
     "\n",
     "# Use `dinov2_vitb14_pretrain`\n",
-    "conf = load_and_merge_config(f'eval/vit{model_size}14_pretrain')\n",
-    "model = build_model_for_eval(conf, f'../dinov2/checkpoints/dinov2_vit{model_size}14_pretrain.pth')\n",
+    "conf = load_and_merge_config(f'eval/vit{model_size}14_reg4_pretrain')\n",
+    "model = build_model_for_eval(conf, f'../dinov2/checkpoints/dinov2_vit{model_size}14_reg4_pretrain.pth')\n",
     "\n",
     "main(video_path, model, output_path, device)\n"
    ]
