--- a/notebooks/patch_embedding_visualize.ipynb
+++ b/notebooks/patch_embedding_visualize.ipynb
@@ -13,9 +13,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/lyk/Projects/dinov2/dinov2/layers/swiglu_ffn.py:43: UserWarning: xFormers is available (SwiGLU)\n",
+      "  warnings.warn(\"xFormers is available (SwiGLU)\")\n",
+      "/home/lyk/Projects/dinov2/dinov2/layers/attention.py:27: UserWarning: xFormers is available (Attention)\n",
+      "  warnings.warn(\"xFormers is available (Attention)\")\n",
+      "/home/lyk/Projects/dinov2/dinov2/layers/block.py:33: UserWarning: xFormers is available (Block)\n",
+      "  warnings.warn(\"xFormers is available (Block)\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -47,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,16 +97,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For crane, use b and 0.7.\n",
+    "For dog, use b and 0.7.\n",
+    "No registers."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Video FPS: 1.00, Total Frames: 4, Duration: 4.00 seconds\n",
+      "Input tensor shape: Batch=4, Channels=3, Height=448, Width=448\n",
+      "Patch size: 14\n",
+      "Embedding dimension: 768\n",
+      "Number of patches of each image: 1024\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing Frames: 100%|██████████| 4/4 [00:00<00:00, 37.10frame/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Performing Two-Stage PCA...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num of foreground patches of image 0: 283\n",
+      "Num of foreground patches of image 1: 293\n",
+      "Num of foreground patches of image 2: 337\n",
+      "Num of foreground patches of image 3: 670\n",
+      "Total num of foreground patches: 1583\n",
+      "Explained variance ratio by PCA components: [0.11140188 0.09799817 0.06075843]\n",
+      "Saving output video...\n",
+      "Video saved to ./data/outputs/embed_crane_b_0.6.mp4\n",
+      "Processing completed! ✅\n"
+     ]
+    }
+   ],
    "source": [
     "threshold=0.7\n",
     "model_size = \"b\"\n",
     "\n",
     "video_path = \"./data/videos/dinov2_dog.mp4\"\n",
-    "output_path = f\"./data/outputs/dinov2_dog_{model_size}_{threshold}.mp4\"\n",
+    "output_path = f\"./data/outputs/embed_dog_{model_size}_{threshold}.mp4\"\n",
     "\n",
     "\n",
     "# Use `dinov2_vitb14_pretrain`\n",
