fully implemented the attn visualization

--- a/notebooks/attention_visualize.ipynb
+++ b/notebooks/attention_visualize.ipynb
@@ -20,9 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "cuda\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -44,80 +53,147 @@
     "import dinov2\n",
     "from dinov2.eval.setup import build_model_for_eval\n",
     "from dinov2.configs import load_and_merge_config\n",
-    "from dinov2.utils.visualize import *\n",
+    "from dinov2.utils.visualize import load_and_preprocess_video, print_video_model_stats, get_last_self_attn, get_attention_map, colorize_attention_map, save_np_array_as_video\n",
     "\n",
     "device = \"cuda\"\n",
     "device = torch.device(device if torch.cuda.is_available() else \"cpu\")\n",
     "print(device)\n",
     "\n",
-    "\n"
+    "\n",
+    "# For pong, 97\n",
+    "# For quadruped, 95\n",
+    "PERCENTILE = 95\n",
+    "TARGET_SIZE = 896 # For a 64*64 video, we resize it to 896*896, and since the dinov2 patch size is 14, we will get a 64*64 attention map."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def main(video_path, model, output_path, device='cuda'):\n",
-    "    num_register_tokens = 4\n",
-    "    raw_tensor, input_tensor, fps = load_preprocess_video(video_path, target_size=448*1, patch_size = model.patch_size)# 448 is multiples of patch_size (14)\n",
-    "    B, C, H, W, patch_size, embedding_dim, patch_num = print_video_model_stats(input_tensor, model)\n",
+    "def main(video_path, model, output_path, device='cuda', masked_output_path = \"\", thresholded_output_path=\"\"):\n",
+    "    video_prenorm, video_normalized, fps = load_and_preprocess_video(video_path, target_size=TARGET_SIZE, patch_size = model.patch_size)# 448 is multiples of patch_size (14)\n",
+    "    T, C, H, W, patch_size, embedding_dim, patch_num = print_video_model_stats(video_normalized, model)\n",
+    "    H_p, W_p = int(H/patch_size), int(W/patch_size)\n",
     "    \n",
-    "    colorized_attention_map_list = []\n",
-    "    last_selfattention_list = []\n",
-    "    with torch.no_grad():\n",
-    "        for i in tqdm(range(B), desc=\"Processing Frames\", unit=\"frame\"):\n",
-    "            frame = input_tensor[i].unsqueeze(0)  # Add batch dimension for the model\n",
-    "            \n",
-    "            \n",
-    "            # Forward pass for the single frame\n",
-    "            last_selfattention = model.get_last_selfattention(frame).detach().cpu().numpy()\n",
-    "            \n",
-    "            last_selfattention_list.append(last_selfattention)\n",
+    "    last_self_attention = get_last_self_attn(model, video_normalized)\n",
+    "    normalized_attention_map = get_attention_map(\n",
+    "        last_self_attention, height_in_patches = H_p, width_in_patches = W_p, num_register_tokens = model.num_register_tokens\n",
+    "    )# (T, H_p, W_p)\n",
     "    \n",
-    "    last_selfattentions = np.vstack(last_selfattention_list)  # (B, num_heads, num_tokens, num_tokens)\n",
     "    \n",
     "    # Resize the attention map for the single frame\n",
-    "    colorized_attn_maps = attention_visualize(last_selfattentions, height_in_patches = int(H/patch_size), width_in_patches = int(W/patch_size), patch_size=patch_size, num_register_tokens = model.num_register_tokens)\n",
-    "            \n",
+    "    colorized_attn_map = colorize_attention_map(normalized_attention_map, patch_size=patch_size)\n",
+    "    save_np_array_as_video(colorized_attn_map, output_path=output_path, fps=fps)\n",
+    "        \n",
+    "    if thresholded_output_path:\n",
+    "        from dinov2.utils.visualize import find_percentile_threshold, generate_attention_mask\n",
+    "        threshold = find_percentile_threshold(normalized_attention_map, percentile=PERCENTILE)\n",
+    "        attention_mask = generate_attention_mask(normalized_attention_map, threshold=threshold)\n",
+    "        thresholded_attn_map = normalized_attention_map * attention_mask\n",
     "    \n",
-    "    save_np_array_as_video(colorized_attn_maps, output_path=output_path, fps=fps)\n"
+    "        colorized_thresholded_attn_map = colorize_attention_map(thresholded_attn_map, patch_size=patch_size)\n",
+    "        save_np_array_as_video(colorized_thresholded_attn_map, output_path=thresholded_output_path, fps=fps)\n",
+    "        \n",
+    "        # Calculate statistics about filtered weights\n",
+    "        total_elements = attention_mask.size\n",
+    "        filtered_elements = total_elements - np.sum(attention_mask)\n",
+    "        filtered_percentage = (filtered_elements / total_elements) * 100\n",
+    "    \n",
+    "        # Print statistics\n",
+    "        print(f\"Threshold value: {threshold:.4f}\")\n",
+    "        print(f\"Filtered out {filtered_elements:,} of {total_elements:,} attention weights\")\n",
+    "        print(f\"Filtered out {filtered_percentage:.2f}% of attention weights\")\n",
+    "        \n",
+    "        if masked_output_path:\n",
+    "            import cv2\n",
+    "            from dinov2.utils.visualize import min_max_normalize\n",
+    "        \n",
+    "        \n",
+    "            # Option 1: Simple nearest-neighbor expansion of each patch (blocky result)\n",
+    "            upsampled_attn_mask = np.zeros((T, H, W), dtype=np.uint8)\n",
+    "            for t in range(T):\n",
+    "                for h in range(H_p):\n",
+    "                    for w in range(W_p):\n",
+    "                        h_start, h_end = h * patch_size, (h + 1) * patch_size\n",
+    "                        w_start, w_end = w * patch_size, (w + 1) * patch_size\n",
+    "                        upsampled_attn_mask[t, h_start:h_end, w_start:w_end] = attention_mask[t, h, w]\n",
+    "            # Expand attention mask map to match video dimensions\n",
+    "            expanded_attn_mask = np.expand_dims(upsampled_attn_mask, axis=-1)  # Shape: (T, H, W, 1)\n",
+    "            expanded_attn_mask = np.repeat(expanded_attn_mask, C, axis=-1)     # Shape: (T, H, W, C)\n",
+    "        \n",
+    "            # Multiply original video with attention map mask\n",
+    "            masked_video = video_prenorm.permute(0, 2, 3, 1).detach().cpu().numpy() * expanded_attn_mask\n",
+    "            masked_video = min_max_normalize(masked_video)\n",
+    "            save_np_array_as_video(masked_video, output_path=masked_output_path, fps=fps)\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Video FPS: 20.00, Total Frames: 128, Duration: 6.40 seconds\n",
+      "Input tensor shape: Batch=128, Channels=3, Height=896, Width=896\n",
+      "Patch size: 14\n",
+      "Embedding dimension: 384\n",
+      "Number of patches of each image: 4096\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 128/128 [00:36<00:00,  3.56it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Video saved to ./data/breakout/outputs/breakout_attn_s.mp4\n",
+      "Video saved to ./data/breakout/outputs/breakout_top_5_percent_attn_s.mp4\n",
+      "Threshold value: 0.0695\n",
+      "Filtered out 498,073.0 of 524,288 attention weights\n",
+      "Filtered out 95.00% of attention weights\n",
+      "Video saved to ./data/breakout/outputs/breakout_top_5_percent_attn_masked_s.mp4\n"
+     ]
+    }
+   ],
    "source": [
-    "# from dinov2.models.vision_transformer import vit_small, vit_large\n",
-    "\n",
-    "# model = vit_large(\n",
-    "#             patch_size=14,\n",
-    "#             img_size=526,\n",
-    "#             init_values=1.0,\n",
-    "#             #ffn_layer=\"mlp\",\n",
-    "#             block_chunks=0\n",
-    "#     )\n",
-    "\n",
-    "# model.load_state_dict(torch.load('../dinov2/checkpoints/dinov2_vitl14_pretrain.pth'))\n",
-    "# for p in model.parameters():\n",
-    "#     p.requires_grad = False\n",
-    "# model.to(device)\n",
-    "# model.eval()\n",
-    "\n",
     "model_size = \"s\"\n",
+    "base_dir = \"./data\"\n",
+    "# exp_name = \"natural\"\n",
+    "# video_name = \"dog_first5sec\"\n",
+    "# video_name = \"dog_cat_first5sec\"\n",
     "\n",
-    "video_path = \"./data/videos/pong_reconstructed_col2.mp4\"\n",
-    "output_path = f\"./data/outputs/attn_pong_reconstructed_col2_{model_size}.mp4\"\n",
+    "exp_name = \"ms_pacman\"\n",
+    "video_name = \"ms_pacman\"\n",
+    "\n",
+    "video_path = f\"{base_dir}/{exp_name}/videos/{video_name}.mp4\"\n",
+    "output_path = f\"{base_dir}/{exp_name}/outputs/{video_name}_attn_{model_size}.mp4\"\n",
+    "masked_output_path = f\"{base_dir}/{exp_name}/outputs/{video_name}_top_{100-PERCENTILE}_percent_attn_masked_{model_size}.mp4\"\n",
+    "thresholded_output_path = f\"{base_dir}/{exp_name}/outputs/{video_name}_top_{100-PERCENTILE}_percent_attn_{model_size}.mp4\"\n",
     "\n",
     "\n",
     "# Use `dinov2_vitb14_pretrain`\n",
     "conf = load_and_merge_config(f'eval/vit{model_size}14_reg4_pretrain')\n",
     "model = build_model_for_eval(conf, f'../dinov2/checkpoints/dinov2_vit{model_size}14_reg4_pretrain.pth')\n",
     "\n",
-    "main(video_path, model, output_path, device)\n"
+    "main(video_path, model, output_path, device, masked_output_path = masked_output_path, thresholded_output_path=thresholded_output_path)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comparison of visualized attn map of original video and masked video shows that DINO representation space preserve even very subtle signal, i.e., the ball/paddles is almost totally masked in the masked video, but the attn map still contains it."
    ]
   }
  ],
